# utoipa-serde-flatten-example

./: Cargo.toml
src/: main.rs
