[package]
name = "utoipa-serde-flatten-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utoipa = {version = "4.2.0", features = ["preserve_order", "yaml"]}
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"